--- a/calculator/pom.xml
+++ b/calculator/pom.xml
@@ -11,6 +11,12 @@
 
     <artifactId>calculator</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
